# metadata-enhancer

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  dot_env_example  pyproject.toml
.github/workflows/: docker-image.yml  image.yml  test.yml
src/: __init__.py  main.py  queries.py  terms.py  utils.py
src/api/: fuseki.py  queries.py  skosmos.py
src/enhancers/: ELSSTEnhancer.py  FrequencyEnhancer.py  KeywordEnhancer.py  MetadataEnhancer.py  VariableEnhancer.py  VocabularyEnhancer.py  __init__.py  queries.py  utils.py
src/enhancers/tests/: test_enhancer.py
src/schema/: input.py
src/test-data/examples/: term_example.json
src/test-data/input-data/: cbs-metadata-input.json  dans-metadata-input.json
src/test-data/output-data/: cbs-frequency-existing-block-output.json  cbs-frequency-output.json  cbs-keyword-output.json  cbs-variable-output.json  dans-keyword-output.json
src/test-data/table-data/: elsst_table.json  frequency_table.json  taxonomy_table.json  vocab_table.json
src/tests/: test_enhancer.py
