[tool.poetry]
name = "metadata-enhancer"
version = "1.1.2"
description = "A project allowing one to set up a FastAPI based Microservice, using cookiecutter"
authors = ["Fjodor van Rijsselberg"]
include = ["src"]

[tool.poetry.dependencies]
python = "^3.9.14"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
fastapi = "^0.85.0"
pytest = "^7.1.3"
requests = "^2.28.1"
dynaconf = "^3.1.11"
jmespath = "^1.0.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.21.0"
cachetools = "^5.3.0"
rdflib = "^6.3.2"
sparqlwrapper = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
