[tool.poetry]
name = "metadata-enhancer"
version = "2.1.1"
description = "A service that enriches metadata using controlled vocabularies."
authors = ["Fjodor van Rijsselberg"]
include = ["src"]

[tool.poetry.dependencies]
python = "^3.10.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.10"
fastapi = "^0.99.0"
pytest = "^7.1.3"
requests = "^2.28.1"
dynaconf = "^3.1.11"
jmespath = "^1.0.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
cachetools = "^5.3.0"
rdflib = "^6.3.2"
sparqlwrapper = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.3.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
